[gd_scene load_steps=11 format=3 uid="uid://biqydrdje17iw"]

[ext_resource type="Script" path="res://scripts/mobs/ghost/simple_enemy.gd" id="1_xbpsp"]
[ext_resource type="Texture2D" uid="uid://byoyvnuu3b0nt" path="res://scenes/mobs/bat_angry_fangs.png" id="2_hd32t"]
[ext_resource type="Texture2D" uid="uid://o7srv5ikq2od" path="res://scenes/mobs/445Ac.png" id="3_wixwc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_opioa"]
atlas = ExtResource("2_hd32t")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eepw2"]
atlas = ExtResource("2_hd32t")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtbc1"]
atlas = ExtResource("2_hd32t")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnh8m"]
atlas = ExtResource("2_hd32t")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2xxuk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_opioa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eepw2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtbc1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnh8m")
}],
"loop": true,
"name": &"fly",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qnjsq"]
radius = 3.0
height = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_vbqld"]
radius = 83.0241

[node name="Shadow_Bat" type="CharacterBody2D"]
script = ExtResource("1_xbpsp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2xxuk")
animation = &"fly"
autoplay = "fly"
frame_progress = 0.986524

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_qnjsq")

[node name="Detection_Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection_Area"]
shape = SubResource("CircleShape2D_vbqld")

[node name="RayCast2D" type="RayCast2D" parent="Detection_Area/CollisionShape2D"]
target_position = Vector2(0, 82)

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(2, -1)
scale = Vector2(0.0156057, 0.0156065)
color = Color(0.772549, 0, 0, 1)
energy = 2.0
texture = ExtResource("3_wixwc")

[node name="PointLight2D" type="PointLight2D" parent="PointLight2D"]
position = Vector2(-256.317, -4.76837e-06)
color = Color(0.772549, 0, 0, 1)
energy = 2.0
texture = ExtResource("3_wixwc")

[connection signal="body_entered" from="Detection_Area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="Detection_Area" to="." method="_on_detection_area_body_exited"]
